fix: longpress on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   display: flex;
   flex-direction: column;
   place-items: center;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 
